--- a/examples/stack_test.ipynb
+++ b/examples/stack_test.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,28 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[31mInit signature:\u001b[39m Stack()\n",
-      "\u001b[31mDocstring:\u001b[39m      <no docstring>\n",
-      "\u001b[31mFile:\u001b[39m           ~/Desktop/AMMI/workspaces/python/data_struct_assignment/data_structures/stack.py\n",
-      "\u001b[31mType:\u001b[39m           type\n",
-      "\u001b[31mSubclasses:\u001b[39m     "
-     ]
-    }
-   ],
-   "source": [
-    "Stack?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -67,7 +46,7 @@
        "True"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -79,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -101,12 +80,12 @@
     }
    ],
    "source": [
-    "my_stack.display_stack()"
+    "my_stack.display()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -115,7 +94,7 @@
        "5"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -126,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -147,7 +126,7 @@
     }
    ],
    "source": [
-    "my_stack.display_stack()"
+    "my_stack.display()"
    ]
   },
   {
