display function for Queue

--- a/examples/queue_test.ipynb
+++ b/examples/queue_test.ipynb
@@ -57,7 +57,7 @@
     }
    ],
    "source": [
-    "my_queue.display_queue()"
+    "my_queue.display()"
    ]
   },
   {
@@ -94,9 +94,9 @@
     }
    ],
    "source": [
-    "my_queue.display_queue()\n",
+    "my_queue.display()\n",
     "my_queue.dequeue()\n",
-    "my_queue.display_queue()"
+    "my_queue.display()"
    ]
   }
  ],
